--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "repository": "https://github.com/jvcaversan/api-node-ts-cities.git",
   "author": "Joao Vitor Caversan <joaovitorcaversan@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "ts-node-dev ./src/index.ts"
+  },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "http-status-codes": "^2.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/http-status-codes": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
