--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "start": "ts-node-dev ./src/index.ts"
   },
   "dependencies": {
+    "all": "^0.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "http-status-codes": "^2.2.0"
+    "http-status-codes": "^2.2.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
