--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node-dev ./src/index.ts",
+    "postinstall": "tsc",
+    "production": "node ./build/index.js",
     "test": "jest"
   },
   "dependencies": {
@@ -29,5 +31,8 @@
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
