--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "jest": "^29.5.0",
+    "knex": "^2.4.2",
     "ts-jest": "^29.1.0",
     "yup": "^1.1.1"
   },
@@ -28,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
+    "sqlite": "^4.2.1",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
