--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "start": "ts-node-dev ./src/index.ts",
     "postinstall": "tsc",
     "production": "node ./build/index.js",
+    "knex:seed": "knex --knexfile ./src/server/database/knex/Environment.ts seed:run",
+    "knex:migrate": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:latest",
+    "knex:rollback": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback",
+    "knex:rollback-all": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback --all",
     "test": "jest"
   },
   "dependencies": {
@@ -29,7 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
-    "sqlite": "^4.2.1",
+    "sqlite3": "^5.1.6",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
