--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
@@ -24,16 +25,17 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
-    "@types/jest": "^29.5.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/http-status-codes": "^1.2.0",
+    "@types/jest": "^29.5.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
+    "jest": "^29.5.0",
     "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
