--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "sqlite3": "^5.1.6",
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/http-status-codes": "^1.2.0",
